--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express-session": "^1.18.2",
     "mongodb": "^6.19.0",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.6"
   }
 }
