회원가입시 이메일 인증3

--- a/.env
+++ b/.env
@@ -4,8 +4,11 @@ CLOUDINARY_API_KEY=294977823154317
 CLOUDINARY_API_SECRET=x_BN_ut__GnMSNhKueuEb9ZbTN8
 
 # MongoDB 접속 정보도 여기에 추가
-MONGODB_URL=mongodb+srv://son2717_db_user:2UqnrLw9K5CwXa9I@cluster0.tm9dlie.mongodb.net/
+MONGO_URL=mongodb+srv://son2717_db_user:2UqnrLw9K5CwXa9I@cluster0.tm9dlie.mongodb.net/
+
+# Session Secret
+SESSION_SECRET=SOME_RANDOM_SECRET_KEY_REPLACE_THIS
 
 # Gmail 계정 정보도 여기에 추가
 GMAIL_USER="hanloveemail@gmail.com"
-GMAIL_APP_PASSWORD="kkky nlya qvvi hesy"
+GMAIL_APP_PASSWORD="ethvkhmhlhhptiyd"
