회원가입시 이메일 인증7

--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ GMAIL_USER="hanloveemail@gmail.com"
 GMAIL_APP_PASSWORD="ethvkhmhlhhptiyd"
 
 # SendGrid API Key
-SENDGRID_API_KEY="yTladlk9EbRDrAET8UdfxUashFbmt7tM"
+SENDGRID_API_KEY="SG.yTladlk9EbRDrAET8UdfxUashFbmt7tM"
