--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@ SESSION_SECRET=SOME_RANDOM_SECRET_KEY_REPLACE_THIS
 GMAIL_USER="hanloveemail@gmail.com"
 GMAIL_APP_PASSWORD="ethvkhmhlhhptiyd"
 
-# Mailgun API Key
-MAILGUN_API_KEY="afa9cb75b8b985c0cbf8b1f92cdac66f-fbceb7cb-d894f1ad"
-MAILGUN_DOMAIN="sandboxdac4dc81ee7c42228aa2911f72423e22.mailgun.org" # Mailgun에 등록한 도메인 주소
+# # Mailgun API Key
+# MAILGUN_API_KEY="afa9cb75b8b985c0cbf8b1f92cdac66f-fbceb7cb-d894f1ad"
+# MAILGUN_DOMAIN="sandboxdac4dc81ee7c42228aa2911f72423e22.mailgun.org" # Mailgun에 등록한 도메인 주소
+
+# SendGrid API Key
+SENDGRID_API_KEY="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"
