회원가입시 이메일 인증16

--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ GMAIL_APP_PASSWORD="ethvkhmhlhhptiyd"
 # MAILGUN_DOMAIN="sandboxdac4dc81ee7c42228aa2911f72423e22.mailgun.org" # Mailgun에 등록한 도메인 주소
 
 # SendGrid API Key
-SENDGRID_API_KEY="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"
+SENDGRID_API_KEY="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"
