--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ GMAIL_APP_PASSWORD="ethvkhmhlhhptiyd"
 # MAILGUN_DOMAIN="sandboxdac4dc81ee7c42228aa2911f72423e22.mailgun.org" # Mailgun에 등록한 도메인 주소
 
 # SendGrid API Key
-SENDGRID_API_KEY="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"
+SENDGRID_API_KEY="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"
